fix: close task 6 runtime review gaps